add controller to create a shorturl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=shortener-backend
+server.port=8080
+
+# Key Generator configuration
+shortener.keygenerator.host=${SHORTENER_KEYGENERATOR_URI:localhost}
+shortener.keygenerator.port=${SHORTENER_KEYGENERATOR_PORT:8082}
+
