--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ server.port=8080
 
 # Key Generator configuration
 shortener.keygenerator.host=${SHORTENER_KEYGENERATOR_URI:localhost}
-shortener.keygenerator.port=${SHORTENER_KEYGENERATOR_PORT:8082}
+shortener.keygenerator.port=${SHORTENER_KEYGENERATOR_PORT:8081}
 
+# Url Service configuration
+shortener.urlservice.host=${SHORTENER_URLSERVICE_URI:localhost}
+shortener.urlservice.port=${SHORTENER_URLSERVICE_PORT:8082}
