use redis cache to get short urls very fast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=shortener-backend
 server.port=8080
 
+# Backend configuration
+shortener.backend.cache.shorturl.timeout=${SHORTENER_BACKEND_CACHE_SHORTURL.TIMEOUT:180}
+
 # Key Generator configuration
 shortener.keygenerator.host=${SHORTENER_KEYGENERATOR_HOST:localhost}
 shortener.keygenerator.port=${SHORTENER_KEYGENERATOR_PORT:8081}
@@ -8,3 +11,10 @@ shortener.keygenerator.port=${SHORTENER_KEYGENERATOR_PORT:8081}
 # Url Service configuration
 shortener.urlservice.host=${SHORTENER_URLSERVICE_HOST:localhost}
 shortener.urlservice.port=${SHORTENER_URLSERVICE_PORT:8082}
+
+# Redis configuration
+spring.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.redis.port=${SPRING_REDIS_PORT:6379}
+# spring.redis.username=myuser
+# spring.redis.password=mypassword
+
