add blacklist for urls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 
 # Backend configuration
 shortener.backend.cache.shorturl.timeout=${SHORTENER_BACKEND_CACHE_SHORTURL.TIMEOUT:180}
+shortener.backend.blacklist.words=snipli,localhost,127.0,192.168,10.,::1,tinyurl.com,bit.ly
 
 # Key Generator configuration
 shortener.keygenerator.host=${SHORTENER_KEYGENERATOR_HOST:localhost}
