--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,23 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Bucket4j Redis extension -->
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j-redis</artifactId>
+			<version>8.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+		</dependency>
+
+		<!-- Optional JSON -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- place rest-assured before the JUnit dependency declaration to get right hemcrest version -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
