--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: CI - Java Maven Docker
 
 on:
@@ -32,7 +24,6 @@ jobs:
       - name: Build with Maven and Run Integration Tests
         run: mvn verify
 
-## Need artifact and version for docker build
       - name: Extract Maven artifactId and version
         id: maven-info
         run: |
@@ -50,13 +41,41 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
 
+    # needed to push version bump commit
     permissions:
-      contents: read
+      contents: write
       packages: write
 
+    # only do release & version bump on main push
+    if: github.event_name == 'push'
+
     steps:
-      - name: Checkout code
+      - name: Checkout code (full history)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      # Remove -SNAPSHOT
+      - name: Set release version (remove SNAPSHOT)
+        run: |
+          mvn versions:set -DremoveSnapshot=true -DgenerateBackupPoms=false
+
+      - name: Read release version
+        id: release-version
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -71,7 +90,7 @@ jobs:
         id: vars
         run: |
           echo "image_name=${{ secrets.DOCKERHUB_USERNAME }}/${{ needs.build-test.outputs.artifact_id }}" >> $GITHUB_OUTPUT
-          echo "image_version=${{ needs.build-test.outputs.version }}" >> $GITHUB_OUTPUT
+          echo "image_version=${{ steps.release-version.outputs.version }}" >> $GITHUB_OUTPUT
 
       - name: Extract metadata (tags, labels)
         id: meta
@@ -82,13 +101,22 @@ jobs:
             latest
             ${{ steps.vars.outputs.image_version }}
 
-      - name: Build and Push Multi-platform Docker Image (linux + macos)
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64 #,darwin/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      # Bump version to next SNAPSHOT
+      - name: Bump to next SNAPSHOT version
+        run: |
+          mvn versions:set -DnextSnapshot=true -DgenerateBackupPoms=false
 
+      - name: Commit and push version bump
+        run: |
+          git add pom.xml
+          git commit -m "chore: bump version to next SNAPSHOT"
+          git push
