feat: add different cors config for dev or prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.application.name=shortener-backend
 server.port=8080
 
 # Cors configuration
-app.cors.allowed-origins=http://localhost:4200,http://localhost:5175,http://127.0.0.1,http://localhost
+app.cors.allowed-origins=http://snib.me,https://snib.me,http://www.snib.me,https://www.snib.me
 
 
 # Backend configuration
