--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+		<!-- validation for @Size - Use jakarta, not javax -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- place rest-assured before the JUnit dependency declaration to get right hemcrest version -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
