feat: rate limiter improvements for ip not using cloudflares and using application properties for configuration

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,11 @@ server.port=8080
 # Cors configuration
 app.cors.allowed-origins=http://snib.me,https://snib.me,http://www.snib.me,https://www.snib.me
 
+# Rate limiting configuration
+app.ratelimit.capacity=20
+app.ratelimit.refill=20
+app.ratelimit.minutes=1
+app.ratelimit.initialTokens=10
 
 # Backend configuration
 shortener.backend.cache.shorturl.timeout=${SHORTENER_BACKEND_CACHE_SHORTURL.TIMEOUT:180}
