--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8080
 # Cors configuration
 app.cors.allowed-origins=http://localhost:4200,http://localhost:5175,http://127.0.0.1,http://localhost
 
+# Rate limiting configuration
+app.ratelimit.capacity=20
+app.ratelimit.refill=20
+app.ratelimit.minutes=1
+app.ratelimit.initialTokens=10
 
 # Backend configuration
 shortener.backend.cache.shorturl.timeout=${SHORTENER_BACKEND_CACHE_SHORTURL.TIMEOUT:180}
