--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.redis.port=${SPRING_REDIS_PORT:6379}
 # spring.redis.username=myuser
 # spring.redis.password=mypassword
 
+# Expose actuator endpoints
+management.endpoints.web.exposure.include=health,info
+# Enable Kubernetes-style probes
+management.endpoint.health.probes.enabled=true
+# Show health details (optional but helpful)
+management.endpoint.health.show-details=always
